# agent_smith

./: .gitignore  Cargo.toml  README.md  SECURITY.md  chat.bat  chat.ps1  discord.bat  discord.ps1  sandbox_config.example.json
claw-mcp-server/: Cargo.toml  README.md  sandbox_config.example.json
claw-mcp-server/src/: agent.rs  config.rs  lib.rs  main.rs
claw-mcp-server/src/ai/: cloud.rs  gemini.rs  local.rs  mod.rs  ollama.rs
claw-mcp-server/src/tools/: ai.rs  file_system.rs  metrics.rs  mod.rs  search.rs  shell.rs
